--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             personas:
                 [
                     { nombre: 'Daniel', apellido: 'Sánchez', dni: 20442873, correo: 'danielsanchez68@hotmail.com' },
-                    //Agregar aquí nombre, apellido, dni y correo en formato objeto 
+                    { nombre: 'Javier', apellido: 'Pyke', dni: 35111979, correo: 'pyke.jn@gmail.com' } 
                 ]
         },
         computed: {
